increased top padding for overlap issue on Player selections

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html, body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: 650px;
-  padding-top: 150px;
+  padding-top: 200px;
   padding-bottom: 200px;
 }
 
